--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 **/application.yml
+**/application-dev.yml
+**/application-local.yml
 
 ### NetBeans ###
 /nbproject/private/
