--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,10 @@ dependencies {
 	//chat
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
+
+	//h2
+	implementation 'com.h2database:h2'
+
 }
 
 tasks.named('test') {
