--- a/build.gradle
+++ b/build.gradle
@@ -60,11 +60,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
 
-	//kafka
-	implementation 'org.springframework.kafka:spring-kafka'
+
 
 	//h2
 	implementation 'com.h2database:h2'
+
+	//rabbit
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+	implementation 'org.springframework.boot:spring-boot-starter-reactor-netty:3.0.0'
+
 
 }
 
